--- a/classes/Transactionc_AD.cls
+++ b/classes/Transactionc_AD.cls
@@ -3,11 +3,10 @@
 *   @description An example of an After Delete implementation for a custom object named Transaction__c
 *
 * */
-public with sharing class Transactionc_AD extends SimpleTriggerArchitecture {
+public with sharing class Transactionc_AD implements SimpleTriggerArchitecture.Executable {
 
-    public override void execute(SimpleTriggerArchitecture.TriggerContext context){
+    public void execute(SimpleTriggerArchitecture.TriggerContext context){
 
         Map<Id, Transaction__c> oldMap = (Map<Id, Transaction__c>)context.getOldMap();
-        List<Transaction__c> oldList = (List<Transaction__c>)context.getOldList();
     }
 }
