--- a/classes/Transactionc_AI.cls
+++ b/classes/Transactionc_AI.cls
@@ -3,9 +3,9 @@
 *   @description An example of an After Insert implementation for a custom object named Transaction__c
 *
 * */
-public with sharing class Transactionc_AI extends SimpleTriggerArchitecture {
+public with sharing class Transactionc_AI implements SimpleTriggerArchitecture.Executable {
 
-    public override void execute(SimpleTriggerArchitecture.TriggerContext context){
+    public void execute(SimpleTriggerArchitecture.TriggerContext context){
 
         Map<Id, Transaction__c> newMap = (Map<Id, Transaction__c>)context.getNewMap();
     }
