--- a/classes/Transactionc_AUD.cls
+++ b/classes/Transactionc_AUD.cls
@@ -3,9 +3,9 @@
 *   @description An example of an After Undelete implementation for a custom object named Transaction__c
 *
 * */
-public with sharing class Transactionc_AUD extends SimpleTriggerArchitecture {
+public with sharing class Transactionc_AUD implements SimpleTriggerArchitecture.Executable {
 
-    public override void execute(SimpleTriggerArchitecture.TriggerContext context){
+    public void execute(SimpleTriggerArchitecture.TriggerContext context){
 
         Map<Id, Transaction__c> newMap = (Map<Id, Transaction__c>)context.getNewMap();
     }
