--- a/classes/Transactionc_BD.cls
+++ b/classes/Transactionc_BD.cls
@@ -1,11 +1,11 @@
 /**
 *
-*   @description An example of an Before Delete implementation for a custom object named Transaction__c
+*   @description An example of a Before Delete implementation for a custom object named Transaction__c
 *
 * */
-public with sharing class Transactionc_BD extends SimpleTriggerArchitecture {
+public with sharing class Transactionc_BD implements SimpleTriggerArchitecture.Executable {
 
-    public override void execute(SimpleTriggerArchitecture.TriggerContext context){
+    public void execute(SimpleTriggerArchitecture.TriggerContext context){
 
         Map<Id, Transaction__c> oldMap = (Map<Id, Transaction__c>)context.getOldMap();
     }
