--- a/classes/Transactionc_BU.cls
+++ b/classes/Transactionc_BU.cls
@@ -1,11 +1,11 @@
 /**
 *
-*   @description An example of an Before Update implementation for a custom object named Transaction__c
+*   @description An example of a Before Update implementation for a custom object named Transaction__c
 *
 * */
-public with sharing class Transactionc_BU extends SimpleTriggerArchitecture {
+public with sharing class Transactionc_BU implements SimpleTriggerArchitecture.Executable {
 
-    public override void execute(SimpleTriggerArchitecture.TriggerContext context){
+    public void execute(SimpleTriggerArchitecture.TriggerContext context){
 
         Map<Id, Transaction__c> newMap = (Map<Id, Transaction__c>)context.getNewMap();
     }
