--- a/classes/Transactionc_AU.cls
+++ b/classes/Transactionc_AU.cls
@@ -3,9 +3,9 @@
 *   @description An example of an After Update implementation for a custom object named Transaction__c
 *
 * */
-public with sharing class Transactionc_AU extends SimpleTriggerArchitecture {
+public with sharing class Transactionc_AU implements SimpleTriggerArchitecture.Executable {
 
-    public override void execute(SimpleTriggerArchitecture.TriggerContext context){
+    public void execute(SimpleTriggerArchitecture.TriggerContext context){
 
         Map<Id, Transaction__c> newMap = (Map<Id, Transaction__c>)context.getNewMap();
     }
